added rotation steps
other stuff